--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter_zoom_drawer: ^3.0.1
+  grouped_list: ^4.2.0
   flutter:
     sdk: flutter
 
@@ -57,6 +58,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - "assets/images/"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
