--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   grouped_list: ^4.2.0
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,11 +43,15 @@ dependencies:
   provider: ^6.0.2
   google_fonts: ^2.3.1
   fluttertoast: ^8.0.9
+  intl: ^0.17.0
+  intl_utils: ^2.6.1
+  scoped_model: ^2.0.0-nullsafety.0
+  path_drawing: ^1.0.0
+  date_picker_timeline:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
