--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   scoped_model: ^2.0.0-nullsafety.0
   path_drawing: ^1.0.0
   date_picker_timeline:
+  avatars: ^3.0.2
 
 dev_dependencies:
   flutter_test:
