--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl_utils: ^2.6.1
   scoped_model: ^2.0.0-nullsafety.0
   path_drawing: ^1.0.0
+  charts_flutter: ^0.12.0
   date_picker_timeline:
   avatars: ^3.0.2
   location: ^4.3.0
